testsuite/tests/typecheck/should_fail/UnliftedNewtypesMismatchedKind.stderr

UnliftedNewtypesMismatchedKind.hs:12:10: error: [GHC-83865]
    • Expected a lifted type, but ‘Int#’ is an IntRep type
    • In the type ‘Int#’
      In the definition of data constructor ‘MkT’
      In the newtype declaration for ‘T’
